feat: migrate all thread creation to Java 21 virtual threads